--- a/FutileDemoProject/.gitignore
+++ b/FutileDemoProject/.gitignore
@@ -7,7 +7,7 @@ Assembly-CSharp.csproj
 Assembly-CSharp-vs.csproj
 Assembly-CSharp-firstpass.csproj
 Assembly-CSharp-firstpass-vs.csproj
-BananaDemoProject.userprefs
 Assembly-CSharp.pidb
 Assembly-CSharp-firstpass.pidb
+*.userprefs
 *.DS_Store
